main page is finished, fixed z-index issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Thasadith:ital,wght@0,400;0,700;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -12,7 +12,8 @@ body {
 }
 
 .App {
-  font-family: "Nanum Gothic", sans-serif;
+  font-family: "Gothic A1", sans-serif;
+  /* font-family: "Nanum Gothic", sans-serif; */
   /* font-family: "Thasadith", sans-serif; */
 }
 /* .App {
