--- a/src/layout/Header.css
+++ b/src/layout/Header.css
@@ -3,23 +3,44 @@ header {
   justify-content: space-between;
   align-items: center;
   position: fixed;
-  padding: 0 30px;
+  padding: 0;
+  margin: 0;
   width: 100%;
   user-select: none;
+  height: 80px;
+  color: white;
+  z-index: 10;
 }
-
+.logo-parent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* position: relative; */
+  height: 100%;
+  /* padding-left: 20px; */
+  width: 100%;
+  /* z-index: 500; */
+  /* background: linear-gradient(#0249bb, #0a0035); */
+  background: black;
+}
 .logo {
   width: 150px;
   cursor: pointer;
-  /* font-weight: 700; */
+  font-size: 30px;
+  font-weight: 500;
+  white-space: nowrap;
+  margin-left: 20px;
 }
-
+.logo:hover {
+  color: #00a6ff;
+}
 nav {
-  width: 350px;
+  width: 325px;
   transition: none;
-
+  /* position: absolute; */
+  right: 20px;
   cursor: pointer;
-  /* border: thin solid black; */
+  margin-right: 20px;
 }
 
 .nav-link {
@@ -27,21 +48,107 @@ nav {
   padding: 2px 10px;
   border-radius: 15px;
   border: 4px solid transparent;
-  font-weight: 700;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.nav-link:hover {
+  color: #00a6ff;
 }
 
 .active {
-  color: #00a5ff;
-  border: 4px solid #00a5ff;
+  color: #00a6ff;
+  border: 4px solid#00a6ff;
 }
 
 .active-logo {
-  color: #00a5ff;
+  color: #00a6ff;
   border: none;
 }
 
 @media screen and (max-width: 500px) {
   header {
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  .logo {
+    width: 80%;
+  }
+  .logo-parent {
+    /* z-index: 10; */
+    flex-wrap: wrap;
+  }
+
+  nav {
+    visibility: collapse;
+    /* opacity: 0; */
+    transform: translateY(-100%);
+    top: 80px;
+    /* left: -20px; */
+    right: 0px;
+    margin: 0;
+    width: 100%;
+    padding: 3px 40px;
+
+    /* background: linear-gradient(black, #00a6ff); */
+    /* background: linear-gradient(#6c4cf5, #548ce8); */
+    background-color: black;
+    z-index: -1;
+  }
+
+  .nav-link {
+    display: block;
+    /* z-index: auto; */
+    /* position: relative; */
+  }
+
+  nav.transition {
+    transition: visibility 0.2s ease-in-out, opacity 0.2s ease-in-out,
+      transform 0.2s ease-in-out;
+  }
+
+  nav.visible {
+    visibility: visible;
+    /* opacity: 1; */
+    transform: translateY(0);
+  }
+
+  .nav-icon-parent {
+    width: 20%;
+  }
+
+  .nav-icon {
+    height: 38px;
+    width: 44px;
+    border: 4px solid #00a6ff;
+    border-radius: 10px;
+    padding: 2px 5px 2px 5px;
+    cursor: pointer;
+  }
+
+  .nav-icon > div {
+    display: block;
+    background-color: #00a6ff;
+    border-radius: 3px;
+    content: "";
+    height: 2px;
+    margin: 5px 0;
+    transition: transform 0.2s ease-in-out;
+  }
+
+  .nav-icon.visible > :first-child {
+    transform: translateY(5px) rotate(45deg);
+  }
+
+  .nav-icon.visible > :last-child {
+    transform: translateY(-5px) rotate(-45deg);
+  }
+
+  .nav-icon.visible > :nth-child(2) {
+    transform: scale(0);
+  }
+
+  /* header {
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
@@ -67,15 +174,10 @@ nav {
     visibility: collapse;
     opacity: 0;
     position: absolute;
-    /* display: block; */
     top: 84px;
     left: -1px;
     margin: 0;
-    /* background-color: gray; */
     width: 101%;
-
-    /* text-decoration: none; */
-    /* list-style: none; */
     padding: 3px 40px;
   }
 
@@ -117,5 +219,5 @@ nav {
 
   .nav-icon.visible > :nth-child(2) {
     transform: scale(0);
-  }
+  } */
 }
