--- a/src/screens/Master.css
+++ b/src/screens/Master.css
@@ -1,7 +1,41 @@
 .master {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  color: black;
+  color: white;
+
+  background-image: url("../img/nyc01.jpg");
+  background-position: center;
+  background-size: cover;
+  /* background: linear-gradient(#47c2ff, #6c4cf5); */
+}
+
+.master > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 300px;
+  text-align: center;
+  padding: 30px;
+  filter: drop-shadow(0 0 15px rgba(0, 0, 0, 1));
+}
+.master > div > h1 {
+  height: 50px;
+  border-radius: 40%;
+  font-size: 50px;
+  filter: drop-shadow(0 0 15px rgba(0, 0, 0, 1));
+
+  /* background-color: rgba(0, 0, 0, 0.3); */
+}
+
+.master > div > h3 {
+  height: 30px;
+  font-size: 20px;
+  border-radius: 40%;
+  filter: drop-shadow(0 0 15px rgba(0, 0, 0, 1));
+
+  /* background-color: rgba(0, 0, 0, 0.3); */
 }
